--- a/stack2.html
+++ b/stack2.html
@@ -129,7 +129,7 @@
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
                             <td class="px-6 py-4 font-semibold">Proxy Server (CORS)</td>
                             <td class="px-6 py-4"><span class="tech-option bg-green-200 text-green-900">Node.js</span></td>
-                            <td class="px-6 py-4">Servidor intermediario para gestionar las llamadas a las APIs desde el navegador y evitar problemas de CORS.</td>
+                            <td class="px-6 py-4">Servidor intermediario para gestionar las llamadas a las APIs desde el navegador y evitar problemas de CORS (Ambiente local).</td>
                             <td class="px-6 py-4">Solución ligera, de alto rendimiento y ampliamente utilizada para crear proxies y gestionar peticiones HTTP de manera eficiente.</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
@@ -205,4 +205,5 @@
     </div>
 </body>
 </html>
+
 
