--- a/stack2.html
+++ b/stack2.html
@@ -134,7 +134,7 @@
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
-                            <td class="px-6 py-4 font-semibold">Túneles de Desarrollo</td>
+                            <td class="px-6 py-4 font-semibold">Webhook</td>
                             <td class="px-6 py-4"><span class="tech-option bg-gray-500 text-white">Ngrok</span></td>
                             <td class="px-6 py-4">Exponer servicios locales (ej. Rasa, Flask) a internet de forma segura para pruebas de webhooks y demos.</td>
                             <td class="px-6 py-4">Herramienta estándar para crear túneles seguros de forma rápida, esencial para probar integraciones con servicios externos.</td>
@@ -205,5 +205,6 @@
     </div>
 </body>
 </html>
+
 
 
