--- a/stack2.html
+++ b/stack2.html
@@ -44,7 +44,7 @@
         <div class="mb-8 p-6 bg-white rounded-xl shadow-lg border border-gray-200">
             <h2 class="text-xl font-bold text-gray-800 mb-2">Introducción al Stack Tecnológico</h2>
             <p class="text-gray-700 leading-relaxed">
-                La elección de un stack tecnológico robusto y coherente es fundamental para el éxito de cualquier proyecto de software. A continuación, se detalla el conjunto de tecnologías, frameworks y herramientas que hemos seleccionado para construir el "Asistente de Voz". Cada componente ha sido elegido estratégicamente para cumplir con los objetivos del proyecto, priorizando la escalabilidad, la seguridad, la eficiencia en costos y, sobre todo, la capacidad de ofrecer una experiencia de usuario accesible y de alto rendimiento. Esta arquitectura nos permite construir una solución moderna, mantenible y preparada para el futuro.
+                La elección de un stack tecnológico robusto y coherente es fundamental para el éxito de cualquier proyecto de software. A continuación, se detalla el conjunto de tecnologías, frameworks y herramientas que hemos seleccionado para construir el "Asistente de compras por Voz". Cada componente ha sido elegido estratégicamente para cumplir con los objetivos del proyecto, priorizando la escalabilidad, la seguridad, la eficiencia en costos y, sobre todo, la capacidad de ofrecer una experiencia de usuario accesible y de alto rendimiento. Esta arquitectura nos permite construir una solución moderna, mantenible y preparada para el futuro.
             </p>
         </div>
         
@@ -205,6 +205,7 @@
     </div>
 </body>
 </html>
+
 
 
 
