--- a/stack2.html
+++ b/stack2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stack Tecnológico - Asistente de Voz</title>
+    <title>Stack Tecnológico - Asistente de compras por Voz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -205,6 +205,7 @@
     </div>
 </body>
 </html>
+
 
 
 
