--- a/stack2.html
+++ b/stack2.html
@@ -32,7 +32,7 @@
         <div class="flex flex-wrap justify-between items-center mb-6">
             <div>
                 <h1 class="text-2xl sm:text-3xl font-bold text-gray-800">Stack Tecnológico del Proyecto</h1>
-                <p class="text-md sm:text-lg text-gray-600">Asistente de Voz</p>
+                <p class="text-md sm:text-lg text-gray-600">Asistente de compras por Voz</p>
             </div>
             <a href="#" onclick="window.history.back(); return false;" class="mt-4 sm:mt-0 bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg transition-colors no-underline flex items-center">
                 <i class="fas fa-arrow-left mr-2"></i>
@@ -205,6 +205,7 @@
     </div>
 </body>
 </html>
+
 
 
 
