--- a/stack2.html
+++ b/stack2.html
@@ -103,7 +103,7 @@
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                              <td class="px-6 py-4 align-top">Backend & IA</td>
-                            <td class="px-6 py-4 font-semibold">API REST (Legacy)</td>
+                            <td class="px-6 py-4 font-semibold">API REST Django</td>
                             <td class="px-6 py-4"><span class="tech-option bg-red-100 text-red-800">Java (Spring Boot)</span></td>
                             <td class="px-6 py-4">Backend centralizado que conecta la app, la base de datos y la lógica de negocio.</td>
                             <td class="px-6 py-4">Ecosistema maduro, robusto y escalable, ideal para la creación de APIs seguras y de alto rendimiento.</td>
@@ -111,7 +111,7 @@
                          <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Backend & IA</td>
                             <td class="px-6 py-4 font-semibold">Base de Datos</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-orange-100 text-orange-800">MySQL (Dockerized)</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-orange-100 text-orange-800">Postgres (Dockerized)</span></td>
                             <td class="px-6 py-4">Almacenamiento persistente para el BackOffice (Django), dockerizado en la misma imagen.</td>
                             <td class="px-6 py-4">Solución open-source robusta. Al estar dockerizada junto al BackOffice, se simplifica el despliegue y la gestión.</td>
                         </tr>
@@ -173,7 +173,7 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                              <td class="px-6 py-4 align-top">Calidad y Seguridad</td>
                             <td class="px-6 py-4 font-semibold">BackOffice / Panel de Gestión</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-green-200 text-green-900">Django</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-green-200 text-green-900">Django/React</span></td>
                             <td class="px-6 py-4">Interfaz web para la gestión de usuarios, análisis de conversaciones y configuración del sistema.</td>
                             <td class="px-6 py-4">Framework de alto nivel en Python que permite un desarrollo rápido y seguro, con un panel de administración auto-generado.</td>
                         </tr>
@@ -205,6 +205,7 @@
     </div>
 </body>
 </html>
+
 
 
 
