--- a/stack2.html
+++ b/stack2.html
@@ -67,8 +67,10 @@
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Aplicación Móvil</td>
                             <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter (Dart)</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter Flow</span></td>
                             <td class="px-6 py-4">Desarrollo de la app móvil accesible, con interfaz optimizada para comandos por voz.</td>
                             <td class="px-6 py-4">Framework moderno y multiplataforma que permite un desarrollo rápido y consistente para Android e iOS.</td>
+                            <td class="px-6 py-4">Permite crear aplicaciones móviles y web mediante un sistema de arrastrar y soltar</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
@@ -205,6 +207,7 @@
     </div>
 </body>
 </html>
+
 
 
 
