--- a/stack2.html
+++ b/stack2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stack Tecnológico - Asistente de compras por Voz</title>
+    <title>Stack Tecnológico - Asistente de Compras por Voz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -66,18 +66,16 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Aplicación Móvil</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter (Dart)</span></td>
-                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter Flow</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter (Dart)</span><span class="tech-option bg-blue-100 text-blue-800">Flutter Flow</span></td>
                             <td class="px-6 py-4">Desarrollo de la app móvil accesible, con interfaz optimizada para comandos por voz.</td>
-                            <td class="px-6 py-4">Framework moderno y multiplataforma que permite un desarrollo rápido y consistente para Android e iOS.</td>
-                            <td class="px-6 py-4">Permite crear aplicaciones móviles y web mediante un sistema de arrastrar y soltar</td>
+                            <td class="px-6 py-4"><b>Flutter:</b> Framework moderno y multiplataforma. <br><b>Flutter Flow:</b> Plataforma low-code para acelerar el diseño y desarrollo de la UI.</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Reconocimiento de Voz (STT)</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-yellow-100 text-yellow-800">Google Cloud Speech API</span>
+                            <td class="px-6 py-4"><span class="tech-option bg-yellow-100 text-yellow-800">Google Cloud Speech API</span></td>
                             <td class="px-6 py-4">Conversión de la voz del usuario a texto para ser procesado por el NLU.</td>
-                            <td class="px-6 py-4"><b>Google Cloud:</b> Máximo control de privacidad (opción de pago)
+                            <td class="px-6 py-4"><b>Google Cloud:</b> Alta precisión y máximo control de privacidad (opción de pago).</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
@@ -106,16 +104,16 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                              <td class="px-6 py-4 align-top">Backend & IA</td>
                             <td class="px-6 py-4 font-semibold">API REST Django</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-red-100 text-red-800">Java (Spring Boot)</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-green-200 text-green-900">Django REST Framework</span></td>
                             <td class="px-6 py-4">Backend centralizado que conecta la app, la base de datos y la lógica de negocio.</td>
-                            <td class="px-6 py-4">Ecosistema maduro, robusto y escalable, ideal para la creación de APIs seguras y de alto rendimiento.</td>
+                            <td class="px-6 py-4">Framework robusto y seguro, integrado con el ecosistema de Django, ideal para la creación de APIs.</td>
                         </tr>
                          <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Backend & IA</td>
                             <td class="px-6 py-4 font-semibold">Base de Datos</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-orange-100 text-orange-800">Postgres (Dockerized)</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-blue-200 text-blue-900">Postgres (Dockerized)</span></td>
                             <td class="px-6 py-4">Almacenamiento persistente para el BackOffice (Django), dockerizado en la misma imagen.</td>
-                            <td class="px-6 py-4">Solución open-source robusta. Al estar dockerizada junto al BackOffice, se simplifica el despliegue y la gestión.</td>
+                            <td class="px-6 py-4">Solución open-source potente y escalable. Al estar dockerizada junto al BackOffice, se simplifica el despliegue y la gestión.</td>
                         </tr>
 
                         <!-- Infraestructura & DevOps -->
@@ -177,7 +175,7 @@
                             <td class="px-6 py-4 font-semibold">BackOffice / Panel de Gestión</td>
                             <td class="px-6 py-4"><span class="tech-option bg-green-200 text-green-900">Django/React</span></td>
                             <td class="px-6 py-4">Interfaz web para la gestión de usuarios, análisis de conversaciones y configuración del sistema.</td>
-                            <td class="px-6 py-4">Framework de alto nivel en Python que permite un desarrollo rápido y seguro, con un panel de administración auto-generado.</td>
+                            <td class="px-6 py-4">Combinación de un backend robusto (Django) con un frontend moderno y reactivo (React) para una experiencia de usuario fluida.</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                              <td class="px-6 py-4 align-top">Calidad y Seguridad</td>
@@ -207,11 +205,3 @@
     </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
